[gd_scene load_steps=2 format=3 uid="uid://b3a3bo6cfyh5t"]

[ext_resource type="Script" path="res://addons/resources_spreadsheet_view/typed_editors/dock_color.gd" id="1"]

[node name="EditColor" type="VBoxContainer"]
offset_bottom = 131.0
grow_horizontal = 2
mouse_filter = 0
script = ExtResource("1")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 9

[node name="HBoxContainer" type="HBoxContainer" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Header/HBoxContainer"]
layout_mode = 2
text = "EDIT: Color"

[node name="HSeparator" type="HSeparator" parent="Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Label" type="Label" parent="Header"]
layout_mode = 2
text = "PROPERTY NAME"

[node name="HSeparator2" type="HSeparator" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="EditColor" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VSeparator7" type="Control" parent="EditColor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator3" type="Control" parent="EditColor"]
visible = false
layout_mode = 2

[node name="ButtonRowTemplate" type="Control" parent="EditColor"]
visible = false
layout_mode = 2

[node name="Button3" type="Button" parent="EditColor/ButtonRowTemplate"]
layout_mode = 0
text = "-X"

[node name="Button2" type="Button" parent="EditColor/ButtonRowTemplate"]
layout_mode = 0
text = "-5"

[node name="Label" type="Label" parent="EditColor/ButtonRowTemplate"]
layout_mode = 0
text = "Red"

[node name="Button5" type="Button" parent="EditColor/ButtonRowTemplate"]
layout_mode = 0
text = "+5"

[node name="Button6" type="Button" parent="EditColor/ButtonRowTemplate"]
layout_mode = 0
text = "+X"

[node name="RGBGrid" type="GridContainer" parent="EditColor"]
layout_mode = 2
columns = 5

[node name="Button3" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(1, 0.780392, 0.780392, 1)
layout_mode = 2
text = "-X"

[node name="Button2" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(1, 0.780392, 0.780392, 1)
layout_mode = 2
text = "-10"

[node name="Label" type="Label" parent="EditColor/RGBGrid"]
layout_mode = 2
text = "Red"
horizontal_alignment = 1

[node name="Button5" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(1, 0.780392, 0.780392, 1)
layout_mode = 2
text = "+10"

[node name="Button6" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(1, 0.780392, 0.780392, 1)
layout_mode = 2
text = "+X"

[node name="Button7" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.666667, 1, 0.745098, 1)
layout_mode = 2
text = "-X"

[node name="Button8" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.666667, 1, 0.745098, 1)
layout_mode = 2
text = "-10"

[node name="Label2" type="Label" parent="EditColor/RGBGrid"]
layout_mode = 2
text = "Green"
horizontal_alignment = 1

[node name="Button11" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.666667, 1, 0.745098, 1)
layout_mode = 2
text = "+10"

[node name="Button12" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.666667, 1, 0.745098, 1)
layout_mode = 2
text = "+X"

[node name="Button13" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.772549, 0.792157, 1, 1)
layout_mode = 2
text = "-X"

[node name="Button14" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.772549, 0.792157, 1, 1)
layout_mode = 2
text = "-10"

[node name="Label3" type="Label" parent="EditColor/RGBGrid"]
layout_mode = 2
text = "Blue"
horizontal_alignment = 1

[node name="Button17" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.772549, 0.792157, 1, 1)
layout_mode = 2
text = "+10"

[node name="Button18" type="Button" parent="EditColor/RGBGrid"]
modulate = Color(0.772549, 0.792157, 1, 1)
layout_mode = 2
text = "+X"

[node name="VSeparator" type="VSeparator" parent="EditColor"]
layout_mode = 2

[node name="ColorProper" type="VBoxContainer" parent="EditColor"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="EditColor/ColorProper"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="EditColor/ColorProper"]
layout_mode = 2
text = "Choose Color"

[node name="VSeparator2" type="VSeparator" parent="EditColor"]
layout_mode = 2

[node name="HSVGrid" type="GridContainer" parent="EditColor"]
layout_mode = 2
columns = 5

[node name="Button3" type="Button" parent="EditColor/HSVGrid"]
modulate = Color(1, 0.913725, 0.776471, 1)
layout_mode = 2
text = "-X"

[node name="Button2" type="Button" parent="EditColor/HSVGrid"]
modulate = Color(0.898039, 1, 0.698039, 1)
layout_mode = 2
text = "-10"

[node name="Label" type="Label" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "Hue"
horizontal_alignment = 1

[node name="Button5" type="Button" parent="EditColor/HSVGrid"]
modulate = Color(0.717647, 1, 0.980392, 1)
layout_mode = 2
text = "+10"

[node name="Button6" type="Button" parent="EditColor/HSVGrid"]
modulate = Color(0.74902, 0.729412, 1, 1)
layout_mode = 2
text = "+X"

[node name="Button7" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "-X"

[node name="Button8" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "-5"

[node name="Label2" type="Label" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "Sat"
horizontal_alignment = 1

[node name="Button11" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "+5"

[node name="Button12" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "+X"

[node name="Button13" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "-X"

[node name="Button14" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "-5"

[node name="Label3" type="Label" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "Value"
horizontal_alignment = 1

[node name="Button17" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "+5"

[node name="Button18" type="Button" parent="EditColor/HSVGrid"]
layout_mode = 2
text = "+X"

[node name="VSeparator4" type="VSeparator" parent="EditColor"]
layout_mode = 2

[node name="CustomX" type="VBoxContainer" parent="EditColor"]
layout_mode = 2

[node name="Label" type="Label" parent="EditColor/CustomX"]
layout_mode = 2
size_flags_vertical = 6
text = "Custom Value"
horizontal_alignment = 1

[node name="Box" type="HBoxContainer" parent="EditColor/CustomX"]
layout_mode = 2

[node name="Label2" type="Label" parent="EditColor/CustomX/Box"]
layout_mode = 2
size_flags_vertical = 6
text = "X ="

[node name="LineEdit" type="LineEdit" parent="EditColor/CustomX/Box"]
layout_mode = 2
size_flags_horizontal = 3
text = "20"

[node name="VSeparator6" type="Control" parent="EditColor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="EditColor/VSeparator6"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Panel2" type="Panel" parent="EditColor/VSeparator6/Panel"]
self_modulate = Color(1.5, 1.5, 1.5, 1)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EditColor/VSeparator6/Panel"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="EditColor/VSeparator6/Panel/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="EditColor/VSeparator6/Panel/MarginContainer/ColorPicker"]
layout_mode = 2
text = "OK"

[connection signal="pressed" from="EditColor/ColorProper/Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="EditColor/VSeparator6/Panel/MarginContainer/ColorPicker" to="." method="_on_ColorPicker_gui_input"]
[connection signal="pressed" from="EditColor/VSeparator6/Panel/MarginContainer/ColorPicker/Button" to="." method="_on_Button_pressed"]
